-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.2
-
d52ca5a49 (dev), 596616d11 (6.10), 1ae68289c (6.9), 5a3059a7d (tqtc/lts-6.8), 550eca3f9 (tqtc/lts-6.5)
Reproducer attached. Build it against 6.8.2 (actually any Qt version will do, even 5.15) and run. One is going to see that the pie chart is opaque, even though the color is set to be semi translucent. And one can actually see from the legend too, that the color should be semi translucent.
Comment out "animationOptions:ChartView.SeriesAnimations" to see the expected result.
BTW it seems to be a PieSlice problem. I've tried BarSet and that looks alright.
| For Gerrit Dashboard: QTBUG-135240 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 649999,3 | PieSliceAnimation: also interpolate alpha channel | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 650927,2 | PieSliceAnimation: also interpolate alpha channel | 6.10 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 651050,2 | PieSliceAnimation: also interpolate alpha channel | 6.9 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 651145,2 | PieSliceAnimation: also interpolate alpha channel | tqtc/lts-6.8 | qt/tqtc-qtcharts | Status: MERGED | +2 | 0 |
| 651186,2 | PieSliceAnimation: also interpolate alpha channel | tqtc/lts-6.5 | qt/tqtc-qtcharts | Status: MERGED | +2 | 0 |